Move global grid definitions to base, remove dependency on grid pattern

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,6 +15,7 @@
 @import 'base_reset';
 @import 'base_tables';
 @import 'base_background';
+@import 'base_grid-definitions';
 
 @mixin vf-base {
   // Reset
@@ -34,4 +35,5 @@
   @include vf-b-lists;
   @include vf-b-media;
   @include vf-b-tables;
+  @include vf-b-grid-definitions;
 }
