--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -220,8 +220,8 @@ $spv-list-item--inner: null;
     }
 
     .p-stepped-list__item {
-      @extend %row;
-      @include row-reset;
+      @extend %vf-row;
+      @include vf-b-row-reset;
     }
   }
 }
