--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -6,21 +6,6 @@
   }
 }
 
-@mixin row-reset-margin {
-  margin-left: 0;
-  margin-right: 0;
-}
-
-@mixin row-reset-padding {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-@mixin row-reset {
-  @include row-reset-margin;
-  @include row-reset-padding;
-}
-
 @mixin vf-p-grid {
   %span-full-grid-on-mobile {
     @media (max-width: $threshold-4-6-col) {
@@ -50,54 +35,8 @@
     display: block;
   }
 
-  %row {
-    @extend %fixed-width-container;
-
-    display: grid;
-    grid-template-rows: auto;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: $grid-max-width;
-
-    [class*='#{$grid-column-prefix}'] {
-      grid-column-start: auto;
-    }
-
-    & & {
-      @include row-reset;
-    }
-
-    // set static gutter width per breakpoint
-    @media (max-width: $threshold-4-6-col) {
-      grid-gap: 0 map-get($grid-gutter-widths, small);
-      grid-template-columns: repeat($grid-columns-small, minmax(0, 1fr));
-
-      & > * {
-        grid-column-end: span $grid-columns-small;
-      }
-    }
-
-    @media (min-width: $threshold-4-6-col) and (max-width: $threshold-6-12-col) {
-      grid-gap: 0 map-get($grid-gutter-widths, medium);
-      grid-template-columns: repeat($grid-columns-medium, minmax(0, 1fr));
-
-      & > * {
-        grid-column-end: span $grid-columns-medium;
-      }
-    }
-
-    @media (min-width: $threshold-6-12-col) {
-      grid-gap: 0 map-get($grid-gutter-widths, large);
-      grid-template-columns: repeat($grid-columns, minmax(0, 1fr));
-
-      & > * {
-        grid-column-end: span $grid-columns;
-      }
-    }
-  }
-
   .row {
-    @extend %row;
+    @extend %vf-row;
   }
 
   // mobile grid
