Remove dependency on list pattern from icon examples

--- a/scss/individual/patterns_icons.scss
+++ b/scss/individual/patterns_icons.scss
@@ -1,5 +1,9 @@
 @import '../base';
 @include vf-base;
 
+// for spin animation on the spinner icon
+@import '../utilities_animations';
+@include vf-u-animations;
+
 @import '../patterns_icons';
 @include vf-p-icons;
