--- a/docs/_includes/patterns/icons/icons-dark.html
+++ b/docs/_includes/patterns/icons/icons-dark.html
@@ -1,75 +1,51 @@
-<div class="p-strip--dark is-shallow">
-  <div class="u-fixed-width">
-    <ul class="p-inline-list u-align--center u-no-margin--bottom">
-      <li class="p-inline-list__item">
-        <i class="p-icon--plus"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--minus"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--expand"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--collapse"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--spinner u-animation--spin"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--contextual-menu"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--close"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--help"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--information"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--delete"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--external-link"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--menu"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--drag"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--code"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--copy"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--search"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--share"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--user"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--question"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--error"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--success"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--warning"></i>
-      </li>
-      <li class="p-inline-list__item">
-        <i class="p-icon--anchor"></i>
-      </li>
-    </ul>
-  </div>
+<div style="background: #111">
+  <i class="p-icon--plus is-light"></i>
+  <i class="p-icon--minus is-light"></i>
+  <i class="p-icon--expand is-light"></i>
+  <i class="p-icon--collapse is-light"></i>
+  <i class="p-icon--spinner u-animation--spin is-light"></i>
+  <i class="p-icon--contextual-menu is-light"></i>
+  <i class="p-icon--close is-light"></i>
+  <i class="p-icon--help is-light"></i>
+  <i class="p-icon--information is-light"></i>
+  <i class="p-icon--delete is-light"></i>
+  <i class="p-icon--external-link is-light"></i>
+  <i class="p-icon--drag is-light"></i>
+  <i class="p-icon--menu is-light"></i>
+  <i class="p-icon--code is-light"></i>
+  <i class="p-icon--copy is-light"></i>
+  <i class="p-icon--search is-light"></i>
+  <i class="p-icon--share is-light"></i>
+  <i class="p-icon--user is-light"></i>
+  <i class="p-icon--question is-light"></i>
+  <i class="p-icon--error is-light"></i>
+  <i class="p-icon--success is-light"></i>
+  <i class="p-icon--warning is-light"></i>
+  <i class="p-icon--anchor is-light"></i>
+</div>
+
+<div class="p-strip--dark u-no-padding" style="background: #111">
+  <i class="p-icon--plus"></i>
+  <i class="p-icon--minus"></i>
+  <i class="p-icon--expand"></i>
+  <i class="p-icon--collapse"></i>
+  <i class="p-icon--spinner u-animation--spin"></i>
+  <i class="p-icon--contextual-menu"></i>
+  <i class="p-icon--close"></i>
+  <i class="p-icon--help"></i>
+  <i class="p-icon--information"></i>
+  <i class="p-icon--delete"></i>
+  <i class="p-icon--external-link"></i>
+  <i class="p-icon--drag"></i>
+  <i class="p-icon--menu"></i>
+  <i class="p-icon--code"></i>
+  <i class="p-icon--copy"></i>
+  <i class="p-icon--search"></i>
+  <i class="p-icon--share"></i>
+  <i class="p-icon--user"></i>
+  <i class="p-icon--question"></i>
+  <i class="p-icon--error"></i>
+  <i class="p-icon--success"></i>
+  <i class="p-icon--warning"></i>
+  <i class="p-icon--anchor"></i>
 </div>
