--- a/scss/individual/patterns_divider.scss
+++ b/scss/individual/patterns_divider.scss
@@ -1,5 +1,9 @@
 @import '../base';
 @include vf-base;
 
+// grid classes (col-X) needed for divider pattern
+@import '../patterns_grid';
+@include vf-p-grid;
+
 @import '../patterns_divider';
 @include vf-p-divider;
