--- a/docs/_includes/patterns/links/links-inverted.html
+++ b/docs/_includes/patterns/links/links-inverted.html
@@ -1,7 +1,3 @@
-<div class="p-strip--dark">
-  <div class="row">
-    <div class="col-12">
-      <a href="#" class="p-link--inverted">Package & publish your app</a>
-    </div>
-  </div>
+<div class="p-strip--dark" style="background: #111">
+  <a href="#" class="p-link--inverted">Package & publish your app</a>
 </div>
