Add individual example pages for layout patterns

--- a/docs/_includes/patterns/matrix.html
+++ b/docs/_includes/patterns/matrix.html
@@ -1,4 +1,4 @@
-<ul class="p-matrix u-clearfix">
+<ul class="p-matrix">
   <li class="p-matrix__item">
     <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/60d9b81e-picto-canonical.svg" alt="icon">
     <div class="p-matrix__content">
