--- a/scss/_base_placeholders.scss
+++ b/scss/_base_placeholders.scss
@@ -67,11 +67,7 @@
   }
 
   // Grid
-  %fixed-width-container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: $grid-max-width;
-    width: 100%;
+  %vf-grid-container-padding {
     // set static gutter width per breakpoint
     @media (max-width: $threshold-4-6-col) {
       padding-left: map-get($grid-margin-widths, small);
@@ -87,6 +83,14 @@
       padding-left: map-get($grid-margin-widths, large);
       padding-right: map-get($grid-margin-widths, large);
     }
+  }
+
+  %fixed-width-container {
+    @extend %vf-grid-container-padding;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: $grid-max-width;
+    width: 100%;
   }
 
   // Utilities
