Get examples index working

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -248,7 +248,7 @@
         {% endif %}
         <div class="p-strip is-shallow">
           <div class="p-content__row">
-            {{ content | safe }}
+            {% block content %}{{ content | safe }}{% endblock content %}
           </div>
         </div>
 
