Fix card overlay pattern standalone example

--- a/scss/standalone/patterns_card.scss
+++ b/scss/standalone/patterns_card.scss
@@ -2,6 +2,8 @@
 @include vf-base;
 
 // needed by card overlay example
+@import '../patterns_strip';
+@include vf-p-strip;
 @import '../patterns_grid';
 @include vf-p-grid;
 @import '../utilities_vertical-spacing';
