--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -43,8 +43,8 @@
               <a href="#main-content">Jump to main content</a>
             </span>
             <ul class="p-navigation__links">
-                <li class="p-navigation__link is-selected"><a href="/">Docs</a></li>
-                <li class="p-navigation__link"><a href="/examples">Examples</a></li>
+                <li class="p-navigation__link {% unless page.url contains '/examples' %}is-selected{% endunless %}"><a href="/">Docs</a></li>
+                <li class="p-navigation__link {% if page.url contains '/examples' %}is-selected{% endif %}"><a href="/examples">Examples</a></li>
                 <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
               <li class="p-navigation__link"><a href="https://vanillaframework.io/browser-support">Browser support</a></li>
               <li class="p-navigation__link"><a href="https://vanillaframework.io/contribute">Contribute</a></li>
