Add favicon to example pages

--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -12,6 +12,7 @@
     {% else %}
     <link rel="stylesheet" type="text/css" href="/build/css/build.css" />
     {% endif %}
+    <link rel="icon" href="https://assets.ubuntu.com/v1/ab36e6ed-vanilla_favicon_32px.png" type="image/x-icon" />
 
     <style>
       html::after {
