--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -7,10 +7,10 @@
     <title>{% if title %}{{ title }} | {% endif %}Vanilla framework documentation</title>
 
     {% if standalone %}
-    <link rel="stylesheet" type="text/css" href="/build/css/standalone/{{ standalone }}.css" />
-    <link rel="stylesheet" type="text/css" href="/build/css/standalone/example.css" />
+    <link rel="stylesheet" type="text/css" href="/static/build/css/standalone/{{ standalone }}.css" />
+    <link rel="stylesheet" type="text/css" href="/static/build/css/standalone/example.css" />
     {% else %}
-    <link rel="stylesheet" type="text/css" href="/build/css/build.css" />
+    <link rel="stylesheet" type="text/css" href="/static/build/css/build.css" />
     {% endif %}
 
 
