update tick elements aligned with table headers

--- a/docs/_includes/base/forms/aligned-checkboxes.html
+++ b/docs/_includes/base/forms/aligned-checkboxes.html
@@ -28,7 +28,7 @@
       <tr>
         <th>
           <input type="checkbox" id="checkExample8">
-          <label for="checkExample8" class="is-muted-inline-heading">Table header text</label>
+          <label for="checkExample8" class="is-table-header">Table header text</label>
         </th>
         <th>Text in adjacent th</th>
       </tr>
