--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -210,6 +210,12 @@
     }
   }
 
+  %table-header-label {
+    @extend %x-small-text;
+    color: $color-mid-dark;
+    font-weight: 400;
+  }
+
   %muted-heading {
     @extend %small-text;
     color: $color-mid-dark;
