--- a/docs/_includes/base/forms/aligned-radio.html
+++ b/docs/_includes/base/forms/aligned-radio.html
@@ -28,7 +28,7 @@
       <tr>
         <th>
           <input type="radio" name="RadioOptions" id="Radio7" value="option1" checked>
-          <label for="Radio7" class="is-muted-inline-heading">Table header text</label>
+          <label for="Radio7" class="is-table-header">Table header text</label>
         </th>
         <th>Text in adjacent th</th>
       </tr>
