--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -35,9 +35,7 @@
     }
 
     th {
-      @extend %x-small-text;
-      color: $color-mid-dark;
-      font-weight: 400;
+      @extend %table-header-label;
       line-height: map-get($line-heights, x-small);
       padding-bottom: $spv-inner--large - map-get($nudges, nudge--x-small);
       padding-top: map-get($nudges, nudge--x-small) + map-get($browser-rounding-compensations, small) + $sp-unit;
