--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -34,7 +34,8 @@ $navigation-hover-opacity: 0.58;
       }
 
       & > a {
-        @include vf-animation;
+        $properties: #{background-color, color, opacity};
+        @include vf-animation($properties);
         display: block;
         line-height: map-get($line-heights, default-text);
         margin-bottom: 0;
