ensure padding is cleared on nested .u-fixed-width

--- a/scss/_utilities_layout.scss
+++ b/scss/_utilities_layout.scss
@@ -1,6 +1,11 @@
 @mixin vf-u-layout {
   .u-fixed-width {
     @extend %fixed-width-container;
+
+    & &,
+    .row & {
+      @include vf-b-row-reset;
+    }
   }
 
   @if ($table-layout-fixed) {
