--- a/scss/standalone/patterns_strip.scss
+++ b/scss/standalone/patterns_strip.scss
@@ -1,7 +1,7 @@
 @import '../base';
 @include vf-base;
 
-// needed by card overlay example
+// needed by some of the examples
 @import '../patterns_grid';
 @include vf-p-grid;
 @import '../utilities_vertically-center';
