--- a/scss/_base_grid-definitions.scss
+++ b/scss/_base_grid-definitions.scss
@@ -6,6 +6,14 @@
 }
 
 @mixin vf-b-grid-definitions {
+  %fixed-width-container {
+    @extend %vf-grid-container-padding;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: $grid-max-width;
+    width: 100%;
+  }
+
   %vf-row {
     @extend %fixed-width-container;
 
@@ -52,9 +60,8 @@
     }
   }
 
-  // Grid
   %vf-grid-container-padding {
-    // set static gutter width per breakpoint
+    // set static outside padding per breakpoint
     @media (max-width: $threshold-4-6-col) {
       padding-left: map-get($grid-margin-widths, small);
       padding-right: map-get($grid-margin-widths, small);
@@ -69,13 +76,5 @@
       padding-left: map-get($grid-margin-widths, large);
       padding-right: map-get($grid-margin-widths, large);
     }
-  }
-
-  %fixed-width-container {
-    @extend %vf-grid-container-padding;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: $grid-max-width;
-    width: 100%;
   }
 }
