Improve the docs regarding including individual icons
Update standalone CSS examples to reflect that.

--- a/scss/standalone/patterns_contextual-menu.scss
+++ b/scss/standalone/patterns_contextual-menu.scss
@@ -6,7 +6,7 @@
 
 // icons are needed for indicator variant
 @import '../patterns_icons';
-@include vf-p-icons;
+@include vf-p-icon-contextual-menu;
 
 @import '../patterns_contextual-menu';
 @include vf-p-contextual-menu;
