--- a/scss/standalone/patterns_pagination.scss
+++ b/scss/standalone/patterns_pagination.scss
@@ -3,7 +3,7 @@
 
 // p-icon--contextual-menu needed as next/prev icon
 @import '../patterns_icons';
-@include vf-p-icons;
+@include vf-p-icon-contextual-menu;
 
 @import '../patterns_pagination';
 @include vf-p-pagination;
