--- a/scss/standalone/patterns_search-box.scss
+++ b/scss/standalone/patterns_search-box.scss
@@ -11,7 +11,8 @@
 
 // icons are needed for search box buttons
 @import '../patterns_icons';
-@include vf-p-icons;
+@include vf-p-icon-close;
+@include vf-p-icon-search;
 
 @import '../patterns_search-box';
 @include vf-p-search-box;
