--- a/scss/standalone/patterns_contextual-menu.scss
+++ b/scss/standalone/patterns_contextual-menu.scss
@@ -6,6 +6,7 @@
 
 // icons are needed for indicator variant
 @import '../patterns_icons';
+@include vf-p-icons-common;
 @include vf-p-icon-contextual-menu;
 
 @import '../patterns_contextual-menu';
