--- a/scss/standalone/patterns_search-box.scss
+++ b/scss/standalone/patterns_search-box.scss
@@ -11,6 +11,7 @@
 
 // icons are needed for search box buttons
 @import '../patterns_icons';
+@include vf-p-icons-common;
 @include vf-p-icon-close;
 @include vf-p-icon-search;
 
