themify contextual menu

--- a/scss/_settings_themes.scss
+++ b/scss/_settings_themes.scss
@@ -2,3 +2,4 @@ $theme-default-forms: 'light' !default;
 $theme-default-hr: 'light' !default;
 $theme-default-nav: 'light' !default;
 $theme-default-p-search-box: 'light' !default;
+$theme-default-p-contextual-menu: 'light' !default;
