--- a/scss/_patterns_contextual-menu.scss
+++ b/scss/_patterns_contextual-menu.scss
@@ -49,7 +49,6 @@
 
   // Dropdown element for contextual menu
   .p-contextual-menu__dropdown {
-    @extend %vf-card;
     @extend %vf-has-box-shadow;
     @extend %vf-has-round-corners;
     display: none;
@@ -65,7 +64,9 @@
     &::before,
     &::after {
       border: {
-        bottom: 8px solid transparentize($color-dark, 0.95);
+        bottom-color: transparent;
+        bottom-style: solid;
+        bottom-width: 8px;
         left: 8px solid transparent;
         right: 8px solid transparent;
       }
@@ -80,7 +81,6 @@
 
     &::after {
       border: {
-        bottom: 6px solid $color-x-light;
         left: 6px solid transparent;
         right: 6px solid transparent;
       }
@@ -97,7 +97,8 @@
     display: block;
 
     + .p-contextual-menu__group {
-      border-top: 1px solid $color-mid-light;
+      border-top-width: 1px;
+      border-top-style: solid;
       margin: -1px 0 0 0;
     }
   }
@@ -114,9 +115,7 @@
     @include vf-focus;
     border: 0;
     clear: both;
-    color: $color-dark;
     display: block;
-    line-height: 1.5rem;
     margin: 0;
     overflow: hidden;
     padding: $spv-inner--x-small $sp-small;
@@ -126,12 +125,115 @@
     width: 100%;
 
     &:hover {
-      background-color: $color-light;
+      border-radius: $border-radius;
       text-decoration: none;
     }
   }
 
   .p-contextual-menu__toggle[aria-expanded='true'] .p-contextual-menu__indicator {
     transform: rotate(180deg);
+  }
+
+  // Theming
+  @if ($theme-default-p-contextual-menu == 'dark') {
+    .p-contextual-menu__dropdown {
+      @extend %p-contextual-menu__dropdown--dark-theme;
+    }
+
+    .p-contextual-menu__group {
+      @extend %p-contextual-menu__group--dark-theme;
+    }
+
+    .p-contextual-menu__link {
+      @extend %p-contextual-menu__link--dark-theme;
+    }
+
+    .p-contextual-menu__dropdown.is-light {
+      @extend %p-contextual-menu__dropdown--light-theme;
+      .p-contextual-menu__group {
+        @extend %p-contextual-menu__group--light-theme;
+      }
+
+      .p-contextual-menu__link {
+        @extend %p-contextual-menu__link--light-theme;
+      }
+    }
+  } @else {
+    .p-contextual-menu__dropdown {
+      @extend %p-contextual-menu__dropdown--light-theme;
+    }
+    .p-contextual-menu__group {
+      @extend %p-contextual-menu__group--light-theme;
+    }
+
+    .p-contextual-menu__link {
+      @extend %p-contextual-menu__link--light-theme;
+    }
+
+    .p-contextual-menu__dropdown.is-dark {
+      @extend %p-contextual-menu__dropdown--dark-theme;
+
+      .p-contextual-menu__group {
+        @extend %p-contextual-menu__group--dark-theme;
+      }
+
+      .p-contextual-menu__link {
+        @extend %p-contextual-menu__link--dark-theme;
+      }
+    }
+  }
+
+  %p-contextual-menu__dropdown--light-theme {
+    background: $colors--light-theme--background;
+
+    &::after {
+      border-bottom-color: $colors--light-theme--background;
+    }
+  }
+
+  %p-contextual-menu__group--light-theme {
+    & + & {
+      border-top-color: $colors--light-theme--border-default;
+    }
+  }
+
+  %p-contextual-menu__link--light-theme {
+    &,
+    &:active,
+    &:hover,
+    &:visited {
+      color: $colors--light-theme--text-default;
+    }
+
+    &:hover {
+      background-color: $colors--light-theme--background-highlighted;
+    }
+  }
+
+  %p-contextual-menu__dropdown--dark-theme {
+    background: $colors--dark-theme--background;
+
+    &::after {
+      border-bottom-color: $colors--dark-theme--background;
+    }
+  }
+
+  %p-contextual-menu__group--dark-theme {
+    & + & {
+      border-top-color: $colors--dark-theme--border-default;
+    }
+  }
+
+  %p-contextual-menu__link--dark-theme {
+    &,
+    &:active,
+    &:hover,
+    &:visited {
+      color: $colors--dark-theme--text-default;
+    }
+
+    &:hover {
+      background-color: $colors--dark-theme--background-highlighted;
+    }
   }
 }
