Use sidebar search box

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -55,8 +55,8 @@
       <hr class="u-no-margin u-hide--small">
       <aside class="p-sidebar">
         <div class="p-sidebar__content">
-          <form class="p-search-box" onsubmit="return false">
-            <input type="search" id="search-docs" class="p-search-box__input" name="search" placeholder="Search components" oninput="filterDocs()" title="Search the documentation" required />
+          <form class="p-search-box" action="/search">
+            <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search components" title="Search the documentation" required />
             <button type="reset" class="p-search-box__reset u-no-margin--right" alt="reset" onclick="resetFilter()"><i class="p-icon--close"></i></button>
             <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
           </form>
