Update examples to use new heading classes

--- a/docs/examples/templates/typographic-spacing.html
+++ b/docs/examples/templates/typographic-spacing.html
@@ -760,34 +760,34 @@
       </div>
     </div>
     <div class="col-6 p-divider__block">
-      <p class="p-heading--one">p-heading--one</p>
+      <p class="p-heading-1">p-heading-1</p>
       <div class="col-1 u-no-margin--left">
-        <p class="p-heading--one">h1</p>
-        <p class="p-heading--one">h1</p>
+        <p class="p-heading-1">h1</p>
+        <p class="p-heading-1">h1</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--one">h1</p>
-        <p class="p-heading--two">h2</p>
+        <p class="p-heading-1">h1</p>
+        <p class="p-heading-2">h2</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--one">h1</p>
-        <p class="p-heading--three">h3</p>
+        <p class="p-heading-1">h1</p>
+        <p class="p-heading-3">h3</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--one">h1</p>
-        <p class="p-heading--four">h4</p>
+        <p class="p-heading-1">h1</p>
+        <p class="p-heading-4">h4</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--one">h1</p>
-        <p class="p-heading--five">h5</p>
+        <p class="p-heading-1">h1</p>
+        <p class="p-heading-5">h5</p>
       </div>
       <div class="col-1">
         <div class="col-6">
-          <p class="p-heading--one">h1</p>
-          <p class="p-heading--six">h6</p>
+          <p class="p-heading-1">h1</p>
+          <p class="p-heading-6">h6</p>
         </div>
         <div class="col-6">
-          <p class="p-heading--one">&nbsp;</p>
+          <p class="p-heading-1">&nbsp;</p>
           <p>p</p>
         </div>
       </div>
@@ -831,34 +831,34 @@
       </div>
     </div>
     <div class="col-6 p-divider__block">
-      <p class="p-heading--two">p-heading--two</p>
+      <p class="p-heading-2">p-heading-2</p>
       <div class="col-1 u-no-margin--left">
-        <p class="p-heading--two">h2</p>
-        <p class="p-heading--one">h1</p>
+        <p class="p-heading-2">h2</p>
+        <p class="p-heading-1">h1</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--two">h2</p>
-        <p class="p-heading--two">h2</p>
+        <p class="p-heading-2">h2</p>
+        <p class="p-heading-2">h2</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--two">h2</p>
-        <p class="p-heading--three">h3</p>
+        <p class="p-heading-2">h2</p>
+        <p class="p-heading-3">h3</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--two">h2</p>
-        <p class="p-heading--four">h4</p>
+        <p class="p-heading-2">h2</p>
+        <p class="p-heading-4">h4</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--two">h2</p>
-        <p class="p-heading--five">h5</p>
+        <p class="p-heading-2">h2</p>
+        <p class="p-heading-5">h5</p>
       </div>
       <div class="col-1">
         <div class="col-6">
-          <p class="p-heading--two">h2</p>
-          <p class="p-heading--six">h6</p>
+          <p class="p-heading-2">h2</p>
+          <p class="p-heading-6">h6</p>
         </div>
         <div class="col-6">
-          <p class="p-heading--two">&nbsp;</p>
+          <p class="p-heading-2">&nbsp;</p>
           <p>p</p>
         </div>
       </div>
@@ -902,34 +902,34 @@
         </div>
       </div>
       <div class="col-6 p-divider__block">
-        <p class="p-heading--three">p-heading--three</p>
+        <p class="p-heading-3">p-heading-3</p>
         <div class="col-1 u-no-margin--left">
-          <p class="p-heading--three">h3</p>
-          <p class="p-heading--one">h1</p>
+          <p class="p-heading-3">h3</p>
+          <p class="p-heading-1">h1</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--three">h3</p>
-          <p class="p-heading--two">h2</p>
+          <p class="p-heading-3">h3</p>
+          <p class="p-heading-2">h2</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--three">h3</p>
-          <p class="p-heading--three">h3</p>
+          <p class="p-heading-3">h3</p>
+          <p class="p-heading-3">h3</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--three">h3</p>
-          <p class="p-heading--four">h4</p>
+          <p class="p-heading-3">h3</p>
+          <p class="p-heading-4">h4</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--three">h3</p>
-          <p class="p-heading--five">h5</p>
+          <p class="p-heading-3">h3</p>
+          <p class="p-heading-5">h5</p>
         </div>
         <div class="col-1">
           <div class="col-6">
-            <p class="p-heading--three">h3</p>
-            <p class="p-heading--six">h6</p>
+            <p class="p-heading-3">h3</p>
+            <p class="p-heading-6">h6</p>
           </div>
           <div class="col-6">
-            <p class="p-heading--three">&nbsp;</p>
+            <p class="p-heading-3">&nbsp;</p>
             <p>p</p>
           </div>
         </div>
@@ -973,34 +973,34 @@
         </div>
       </div>
       <div class="col-6 p-divider__block">
-        <p class="p-heading--four">p-heading--four</p>
+        <p class="p-heading-4">p-heading-4</p>
         <div class="col-1 u-no-margin--left">
-          <p class="p-heading--four">h4</p>
-          <p class="p-heading--one">h1</p>
+          <p class="p-heading-4">h4</p>
+          <p class="p-heading-1">h1</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--four">h4</p>
-          <p class="p-heading--two">h2</p>
+          <p class="p-heading-4">h4</p>
+          <p class="p-heading-2">h2</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--four">h4</p>
-          <p class="p-heading--three">h3</p>
+          <p class="p-heading-4">h4</p>
+          <p class="p-heading-3">h3</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--four">h4</p>
-          <p class="p-heading--four">h4</p>
+          <p class="p-heading-4">h4</p>
+          <p class="p-heading-4">h4</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--four">h4</p>
-          <p class="p-heading--five">h5</p>
+          <p class="p-heading-4">h4</p>
+          <p class="p-heading-5">h5</p>
         </div>
         <div class="col-1">
           <div class="col-6">
-            <p class="p-heading--four">h4</p>
-            <p class="p-heading--six">h6</p>
+            <p class="p-heading-4">h4</p>
+            <p class="p-heading-6">h6</p>
           </div>
           <div class="col-6">
-            <p class="p-heading--four">&nbsp;</p>
+            <p class="p-heading-4">&nbsp;</p>
             <p>p</p>
           </div>
         </div>
@@ -1044,34 +1044,34 @@
         </div>
       </div>
       <div class="col-6 p-divider__block">
-        <p class="p-heading--five">p-heading--five</p>
+        <p class="p-heading-5">p-heading-5</p>
         <div class="col-1 u-no-margin--left">
-          <p class="p-heading--five">h5</p>
-          <p class="p-heading--one">h1</p>
+          <p class="p-heading-5">h5</p>
+          <p class="p-heading-1">h1</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--five">h5</p>
-          <p class="p-heading--two">h2</p>
+          <p class="p-heading-5">h5</p>
+          <p class="p-heading-2">h2</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--five">h5</p>
-          <p class="p-heading--three">h3</p>
+          <p class="p-heading-5">h5</p>
+          <p class="p-heading-3">h3</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--five">h5</p>
-          <p class="p-heading--four">h4</p>
+          <p class="p-heading-5">h5</p>
+          <p class="p-heading-4">h4</p>
         </div>
         <div class="col-1">
-          <p class="p-heading--five">h5</p>
-          <p class="p-heading--five">h5</p>
+          <p class="p-heading-5">h5</p>
+          <p class="p-heading-5">h5</p>
         </div>
         <div class="col-1">
           <div class="col-6">
-            <p class="p-heading--five">h5</p>
-            <p class="p-heading--six">h6</p>
+            <p class="p-heading-5">h5</p>
+            <p class="p-heading-6">h6</p>
           </div>
           <div class="col-6">
-            <p class="p-heading--five">&nbsp;</p>
+            <p class="p-heading-5">&nbsp;</p>
             <p>p</p>
           </div>
         </div>
@@ -1115,34 +1115,34 @@
       </div>
     </div>
     <div class="col-6 p-divider__block">
-      <p class="p-heading--six">p-heading--six</p>
+      <p class="p-heading-6">p-heading-6</p>
       <div class="col-1 u-no-margin--left">
-        <p class="p-heading--six">h6</p>
-        <p class="p-heading--one">h1</p>
+        <p class="p-heading-6">h6</p>
+        <p class="p-heading-1">h1</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--six">h6</p>
-        <p class="p-heading--two">h2</p>
+        <p class="p-heading-6">h6</p>
+        <p class="p-heading-2">h2</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--six">h6</p>
-        <p class="p-heading--three">h3</p>
+        <p class="p-heading-6">h6</p>
+        <p class="p-heading-3">h3</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--six">h6</p>
-        <p class="p-heading--four">h4</p>
+        <p class="p-heading-6">h6</p>
+        <p class="p-heading-4">h4</p>
       </div>
       <div class="col-1">
-        <p class="p-heading--six">h6</p>
-        <p class="p-heading--five">h5</p>
+        <p class="p-heading-6">h6</p>
+        <p class="p-heading-5">h5</p>
       </div>
       <div class="col-1">
         <div class="col-6">
-          <p class="p-heading--six">h6</p>
-          <p class="p-heading--six">h6</p>
+          <p class="p-heading-6">h6</p>
+          <p class="p-heading-6">h6</p>
         </div>
         <div class="col-6">
-          <p class="p-heading--six">&nbsp</p>
+          <p class="p-heading-6">&nbsp</p>
           <p>p</p>
         </div>
       </div>
@@ -1364,7 +1364,7 @@
   <div class="row u-equal-height">
     <div class="col-9">
       <h1>Canonical’s AI and ML solutions feature…</h1>
-      <p class="p-heading--two">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
+      <p class="p-heading-2">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
       <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place
         your AI, ML and DL services exactly where you want them while sharing operational code with a large community.
         From your developer workstation, to your racks, to the public cloud, AI on Ubuntu is accelerated with the latest
@@ -1384,7 +1384,7 @@
   <div class="row u-equal-height">
     <div class="col-9">
       <h1>Canonical’s AI and ML solutions feature…</h1>
-      <p class="p-heading--three">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
+      <p class="p-heading-3">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
       <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place
         your AI, ML and DL services exactly where you want them while sharing operational code with a large community.
         From your developer workstation, to your racks, to the public cloud, AI on Ubuntu is accelerated with the latest
@@ -1402,7 +1402,7 @@
   <div class="row u-equal-height">
     <div class="col-9">
       <h1>Canonical’s AI and ML solutions feature…</h1>
-      <p class="p-heading--four">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
+      <p class="p-heading-4">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
       <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place
         your AI, ML and DL services exactly where you want them while sharing operational code with a large community.
         From your developer workstation, to your racks, to the public cloud, AI on Ubuntu is accelerated with the latest
@@ -1420,7 +1420,7 @@
   <div class="row u-equal-height">
     <div class="col-9">
       <h2>Canonical’s AI and ML solutions feature…</h2>
-      <p class="p-heading--three">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
+      <p class="p-heading-3">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
       <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place
         your AI, ML and DL services exactly where you want them while sharing operational code with a large community.
         From your developer workstation, to your racks, to the public cloud, AI on Ubuntu is accelerated with the latest
@@ -1438,7 +1438,7 @@
   <div class="row u-equal-height">
     <div class="col-9">
       <h2>Canonical’s AI and ML solutions feature…</h2>
-      <p class="p-heading--four">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
+      <p class="p-heading-4">Architectural freedom. Fully automated operations. Accelerated Deep Learning</p>
       <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place
         your AI, ML and DL services exactly where you want them while sharing operational code with a large community.
         From your developer workstation, to your racks, to the public cloud, AI on Ubuntu is accelerated with the latest
