Update class names to propely use --modifier

--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -79,7 +79,7 @@
   }
 
   [class*='p-card'] {
-    > p:not([class^='p-heading-']),
+    > p:not([class^='p-heading--']),
     > h5,
     > h6 {
       &:last-child {
