--- a/scss/_patterns_headings.scss
+++ b/scss/_patterns_headings.scss
@@ -2,31 +2,31 @@
 
 // Default breadcrumbs styling
 @mixin vf-p-headings {
-  .p-heading-1 {
+  .p-heading--1 {
     @extend %vf-heading-1;
   }
 
-  .p-heading-2 {
+  .p-heading--2 {
     @extend %vf-heading-2;
   }
 
-  .p-heading-3 {
+  .p-heading--3 {
     @extend %vf-heading-3;
   }
 
-  .p-heading-4 {
+  .p-heading--4 {
     @extend %vf-heading-4;
   }
 
-  .p-heading-5 {
+  .p-heading--5 {
     @extend %vf-heading-5;
   }
 
-  .p-heading-6 {
+  .p-heading--6 {
     @extend %vf-heading-6;
   }
 
-  @include deprecate('3.0.0', 'Use the `p-heading-1`, `p-heading-2`, ... instead') {
+  @include deprecate('3.0.0', 'Use the `p-heading--1`, `p-heading--2`, ... instead') {
     .p-heading--one {
       @extend %vf-heading-1;
     }
