--- a/scss/_patterns_links.scss
+++ b/scss/_patterns_links.scss
@@ -83,9 +83,9 @@ $external-icon-size--headings: #{map-get($icon-sizes, heading-icon--x-small)};
   h1,
   h2,
   h3,
-  .p-heading-1,
-  .p-heading-2,
-  .p-heading-3,
+  .p-heading--1,
+  .p-heading--2,
+  .p-heading--3,
   .p-heading--one,
   .p-heading--two,
   .p-heading--three {
@@ -139,9 +139,9 @@ $external-icon-size--headings: #{map-get($icon-sizes, heading-icon--x-small)};
   h1,
   h2,
   h3,
-  .p-heading-1,
-  .p-heading-2,
-  .p-heading-3,
+  .p-heading--1,
+  .p-heading--2,
+  .p-heading--3,
   .p-heading--one,
   .p-heading--two,
   .p-heading--three {
