Move docs styles to vanilla scss folder

--- a/scss/docs/styles.scss
+++ b/scss/docs/styles.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-@import '_settings';
-@import 'vanilla-framework/scss/build';
+@import 'settings';
+@import '../build';
 
 @import 'codehilite';
 @include codehilite;
