--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -76,11 +76,11 @@
               <li class="p-sidebar-nav__item">
                 <strong>Base elements</strong>
                 <ul class="p-sidebar-nav__list">
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/code' %}is-active{% endif %}" href="/base/code">Code</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/forms' %}is-active{% endif %}" href="/base/forms">Forms</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/reset' %}is-active{% endif %}" href="/base/reset">Reset</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/tables' %}is-active{% endif %}" href="/base/tables">Tables</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/typography' %}is-active{% endif %}" href="/base/typography">Typography</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/base/code' %}is-active{% endif %}" href="/docs/base/code">Code</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/base/forms' %}is-active{% endif %}" href="/docs/base/forms">Forms</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/base/reset' %}is-active{% endif %}" href="/docs/base/reset">Reset</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/base/tables' %}is-active{% endif %}" href="/docs/base/tables">Tables</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/base/typography' %}is-active{% endif %}" href="/docs/base/typography">Typography</a></li>
                 </ul>
               </li>
 
